--- a/zoo-css-challenge/index.html
+++ b/zoo-css-challenge/index.html
@@ -112,7 +112,7 @@
 				<h4>Learning about the rainforest</h4>
 				<a>Find out More</a>
 			</div>
-			<div class="card1">
+			<div id="fxpn" class="card1">
 				<time>2021-06-10</time>
 				<h4>Which big cat are you?</h4>
 				<a>Find out More</a>
